--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext .tsx,.ts",
     "lint:fix": "eslint . --ext .tsx,.ts --fix",
     "test": "jest --coverage",
-    "test:watch": "jest --watchAll --coverage"
+    "test:watch": "jest --watchAll --coverage",
+    "prepare": "husky install"
   },
   "author": "Netanel Vaknin",
   "license": "ISC",
@@ -30,7 +31,8 @@
     "jest": "^27.4.7",
     "parcel": "^2.2.0",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3"
+    "ts-jest": "^27.1.3",
+    "husky": "^7.0.0"
   },
   "dependencies": {
     "@types/react": "^17.0.38",
