--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "eslint . --ext .tsx,.ts --fix",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "author": "Netanel Vaknin",
   "license": "ISC",
@@ -28,16 +29,25 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.0",
     "jest": "^27.4.7",
+    "lint-staged": "12.1.2",
     "parcel": "^2.2.0",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "husky": "^7.0.0"
+    "ts-jest": "^27.1.3"
   },
   "dependencies": {
+    "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,jsx,tsx}": [
+      "npm run lint:fix"
+    ],
+    "*.{tsx,ts}": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
