--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "react-dom": "^17.0.2"
   },
   "lint-staged": {
+    "src/*.{js,ts,jsx,tsx}": [
+      "npm run lint:fix"
+    ],
     "src/**/*.{js,ts,jsx,tsx}": [
       "npm run lint:fix"
     ]
