--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint:fix": "eslint . --ext .tsx,.ts --fix",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll --coverage",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "prepare": "husky install"
   },
   "author": "Netanel Vaknin",
   "license": "ISC",
@@ -31,7 +30,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
-    "lint-staged": "^12.1.7",
     "parcel": "^2.2.0",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3"
@@ -42,13 +40,5 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  },
-  "lint-staged": {
-    "src/*.{js,ts,jsx,tsx}": [
-      "npm run lint:fix"
-    ],
-    "src/**/*.{js,ts,jsx,tsx}": [
-      "npm run lint:fix"
-    ]
   }
 }
