--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
         "import/extensions": [2, "never"],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx", ".ts"] }],
         "react/jsx-indent": [2, 2, {"checkAttributes": true, "indentLogicalExpressions": true}],
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-console": "off"
     },
     "settings": {
         "import/resolver": {
