--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "jest": "^27.4.7",
     "parcel": "^2.2.0",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3"
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@types/node": "^17.0.8",
